--- a/myapp/templates/result.html
+++ b/myapp/templates/result.html
@@ -13,7 +13,9 @@
 <div class="container mt-5">
     <h2>Download Processed Files</h2>
     <a href="{% url 'download_file' tally_path %}" class="btn btn-success">Download Tally File</a>
-    <a href="{% url 'download_file' gst_path %}" class="btn btn-success">Download GST File</a>
+    <a href="{% url 'download_file' gst_path %}" class="btn btn-success">Download GST File</a><br/><br/>
+    <a href="{% url 'index'  %}" class="btn btn-success">Home</a>
+
 </div>
 </body>
 </html>
